--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,6 @@ span {
     color: grey;
 }
 
-.yellow {
-    background-color: yellow;
-}
-
 button {
     display: block;
     background-color: brown;
@@ -19,4 +15,21 @@ button {
     margin-bottom: 2px;
     margin-left: auto;
     margin-right: auto;
+}
+
+div {
+    display: flex;
+    flex-direction: column;
+}
+
+.white {
+    background-color: white;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.order-1 {
+    order: 1;
 }
